# rag-chat-service

./: .gitignore  Academic_Report_Skeleton.md  CLAUDE.md  FE_TASKS.md  LICENSE  PROJECT_HISTORY.md  README.md  README.txt  main.py  ngrok.yml  procedure.md  pyproject.toml  requirements.txt  run_dev.bat  run_fe.bat  run_ngrok.bat
BE/: chunking_examples.txt  debug_output.txt  docker-compose.yml  error.txt  main.py  method_comparison.txt  pyproject.toml  requirements.txt
BE/app/agent/: config.py  graph.mermaid  graph.py  prompt_templates.py  retrieval.py  state.py
BE/app/agent/tools/: __init__.py  kb_tools.py  tool_service.py
BE/app/agent/tools/knowledge_base/: __init__.py  list_kb_documents_tool.py  list_knowledge_bases_tool.py  search_knowledge_base_tool.py
BE/app/api/: __init__.py  dependencies.py
BE/app/api/v1/: __init__.py  ai_model_api.py  analytics_api.py  auth.py  auth_api.py  bots_api.py  chat_api.py  chatbot_api.py  class_api.py  course_api.py  data_processor_api.py  document_api.py  knowledge_base.py  knowledge_base_api.py  quiz_api.py  root_api.py  semester_api.py  session_api.py  tenant_api.py  users.py  users_api.py
BE/app/config/: celery.py  config.py
BE/app/core/: context.py  database.py  factory.py  logger.py  supabase_client.py
BE/app/core/enums/: file.py  http.py
BE/app/helper/: auth_verifier.py  chunker.py  document_extractor.py  utils_kb.py
BE/app/rag/: retrieval.py
BE/app/repositories/: __init__.py  ai_model_repository.py  base_repository.py  bot_repository.py  chat_message_repository.py  class_repository.py  course_repository.py  document_repository.py  graph_chunk_repository.py  graph_edge_repository.py  graph_entity_repository.py  knowledge_base_repository.py  quiz_repository.py  semester_repository.py  session_repository.py  session_summary_repository.py  tenant_repository.py  user_repository.py  vector_repository.py
BE/app/schemas/: ai_model.py  analytics.py  auth.py  bot.py  common.py  common_params.py  course.py  data_processor.py  document.py  knowledge_base.py  llm.py  quiz.py  session.py
BE/app/services/: __init__.py  ai_model_service.py  analytics_service.py  auth_service.py  bot_service.py  chat_service.py  course_service.py  document_service.py  embedding_service.py  extractor_service.py  file_processing_service.py  knowledge_base_service.py  llm_service.py  memory_service.py  minio_storage_service.py  quiz_service.py  session_service.py  tenant_service.py  user_service.py
BE/app/services/ai_model/: ai_model_service.py
BE/app/services/analytics/: analytics_service.py
BE/app/services/auth/: auth_service.py
BE/app/services/bot/: bot_service.py
BE/app/services/chat/: chat_service.py  config.py  history.py  retrieval.py
BE/app/services/course/: class_service.py  course_service.py  semester_service.py
BE/app/services/data_processor/: file_processor.py
BE/app/services/document/: document_service.py
BE/app/services/extractor/: extractor_service.py  schemas.py
BE/app/services/indexer/: embedding_service.py  vector_store.py
BE/app/services/knowledge_base/: knowledge_base_service.py
BE/app/services/llm/: llm_service.py  prompt_templates.py
BE/app/services/memory/: memory_service.py
BE/app/services/minio/: minio_client.py  minio_storage.py
BE/app/services/session/: session_service.py
BE/app/services/supabase/: ai_model_repository.py  bot_kb_repository.py  bot_repository.py  chat_message_repository.py  class_repository.py  course_repository.py  document_repository.py  graph_chunk_repository.py  graph_edge_repository.py  graph_entity_repository.py  knowledge_base_repository.py  metadata_repository.py  quiz_repository.py  semester_repository.py  session_repository.py  session_summary_repository.py  supabase_client.py  tenant_repository.py  user_repository.py
BE/app/services/tools/: knowledge_base_tool.py  list_knowledge_bases_tool.py  tool_service.py
BE/app/services/users/: user_service.py
BE/app/task/: __init__.py  document_cleanup_worker.py  file_processor_worker.py
BE/app/utils/: auth.py
BE/app/worker/: __init__.py  document_cleanup_worker.py  file_processor_worker.py
BE/bruno_collection/: bruno.json
BE/bruno_collection/Analytics/: Get Summary.bru
BE/bruno_collection/Auth/: Login.bru  Register.bru
BE/bruno_collection/Chatbot/: Ask Bot (Session).bru  Ask Bot.bru  Create Bot.bru  Delete Bot.bru  Get Bot.bru  List Bots.bru  Update Bot Config.bru
BE/bruno_collection/DataProcessor/: Get Task Status.bru  Upload File.bru
BE/bruno_collection/KnowledgeBase/: Create Knowledge Base.bru  Get Knowledge Base Details.bru  Get Knowledge Base List.bru  Update Knowledge Base.bru
BE/bruno_collection/Root/: Health Check.bru
BE/bruno_collection/Sessions/: Create Session.bru  List Sessions.bru
BE/bruno_collection/Users/: Create User.bru  Delete User.bru  Delete Users.bru  Get All Users.bru
BE/bruno_collection/environments/: dev.bru
BE/examples/: graph_extraction_demo.py  langextract_demo.py
BE/scripts/: enable_vault.sql
BE/tests/: conftest.py  test_auth.py  test_documents.py  test_knowledge_bases.py  test_tenants.py  test_users.py
BE/tests/helper/: test_chunker.py
FE/: i18next-parser.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  upload-preview.html
FE/app/: globals.css  layout.tsx  page.tsx
FE_Dat/: login.html  register.html
FE_React/: package-lock.json  package.json  tailwind.config.js  vite.config.js
docs/: fetch_documents.mmd  fetch_documents.puml  upload_document.mmd
(+260 files in other folders)
