[project]
name = "it-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "celery==5.5.3",
    "celery-types==0.23.0",
    "email-validator>=2.3.0",
    "fastapi==0.115.14",
    "ipykernel>=6.30.1",
    "jose>=1.0.0",
    "lightrag-hku>=1.4.8.2",
    "llama-index==0.12.46",
    "llama-index-node-parser-docling==0.3.2",
    "llama-index-readers-docling==0.3.3",
    "llama-index-readers-file==0.4.9",
    "llama-index-readers-json==0.3.0",
    "llama-index-vector-stores-qdrant==0.6.1",
    "minio==7.2.15",
    "passlib==1.7.4",
    "pydantic-settings==2.11.0",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "redis==6.2.0",
    "sentence-transformers>=5.1.1",
    "supabase==2.16.0",
    "uvicorn==0.35.0",
    "langchain[text-splitter]",
    "langchain-text-splitters>=1.0.0",
]

[tool.setuptools]
packages = ["app"]
