[project]
name = "it-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "celery==5.5.3",
    "celery-types==0.23.0",
    "email-validator>=2.3.0",
    "fastapi==0.115.14",
    "llama-index==0.12.46",
    "llama-index-node-parser-docling==0.3.2",
    "llama-index-readers-docling==0.3.3",
    "llama-index-readers-file==0.4.9",
    "llama-index-readers-json==0.3.0",
    "llama-index-vector-stores-qdrant==0.6.1",
    "minio==7.2.15",
    "passlib==1.7.4",
    "pydantic-settings==2.11.0",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "supabase==2.16.0",
    "uvicorn==0.35.0",
    "langchain-text-splitters>=1.0.0",
    "qdrant-client>=1.11.0",
    "python-pptx>=1.0.2",
    "cachetools>=6.2.2",
    "tiktoken>=0.12.0",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "tornado>=6.4.2",
    "scikit-learn",
    "accelerate>=1.11.0",
    "protobuf>=6.33.1",
    "google-genai>=1.55.0",
    "llama-index-node-parser-topic>=0.2.0",
    "llama-index-node-parser-slide>=0.1.0",
    "fastapi-cache2>=0.2.2",
    "fastapi-limiter>=0.1.6",
    "redis>=5.0.0",
    "sentence-transformers>=5.2.0",
    "fastembed>=0.7.4",
    "tenacity>=8.5.0",
    "ijson>=3.4.0.post0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "huggingface-hub>=0.36.0",
    "ollama>=0.6.1",
    "hf-xet>=1.2.0",
    "openpyxl>=3.1.5",
    "beautifulsoup4>=4.14.3",
    "pydantic>=2.12.5",
    "pymupdf4llm>=0.2.7",
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-community>=0.4.1",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
